# learning_raylib

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.py
.cache/clangd/index/: main.cpp.5135D5B01372537D.idx
include/: Player.h  constants.h
src/: Player.cpp  main.cpp  platform-main.cpp  run.sh
